tests/ui/derive/fail_malformed_api_schema_struct_validation_metadata.rs
use serde::Serialize;

#[derive(Serialize, ts_rs::TS, foundry::ApiSchema)]
#[validate(messages(email(unique "This email is already registered.")))]
struct MalformedStructValidationMetadata {
    email: String,
}

fn main() {}
